gccida/g2/init_optabs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5214:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code *v8; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5215:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code *v9; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5217:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *handlers; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5217:36: error: use of undeclared identifier 'handlers'
$B50C8071A5A789E219D5EDC319094081 *handlers; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5219:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *v13; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5219:36: error: use of undeclared identifier 'v13'
$B50C8071A5A789E219D5EDC319094081 *v13; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5221:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *v15; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5221:36: error: use of undeclared identifier 'v15'
$B50C8071A5A789E219D5EDC319094081 *v15; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5223:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *v17; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5223:36: error: use of undeclared identifier 'v17'
$B50C8071A5A789E219D5EDC319094081 *v17; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5225:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *v19; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5225:36: error: use of undeclared identifier 'v19'
$B50C8071A5A789E219D5EDC319094081 *v19; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5227:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *v21; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5227:36: error: use of undeclared identifier 'v21'
$B50C8071A5A789E219D5EDC319094081 *v21; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5229:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *v23; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5229:36: error: use of undeclared identifier 'v23'
$B50C8071A5A789E219D5EDC319094081 *v23; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5231:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *v25; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5231:36: error: use of undeclared identifier 'v25'
$B50C8071A5A789E219D5EDC319094081 *v25; // rax 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/optabs.c:5233:1: error: use of undeclared identifier '$B50C8071A5A789E219D5EDC319094081'
$B50C8071A5A789E219D5EDC319094081 *v27; // rax 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_optabs/src/obj/optabs.o] Error 1
